# Mid-Term_Exam-yaron

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXAM.md  README.md  app.py  install.sh  pyproject.toml
