[tool.poetry]
name = "status-dashboard"
version = "1.0.0"
description = "Internal status dashboard for Acme Internal Tools Ltd."
authors = ["Yaron Segev <yar.segev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"